# rdt

./: CLAUDE.md  Cargo.toml  PROGRESS.md  README.md  RELEASING.md
.github/workflows/: ci.yml  release.yml
homebrew/: rdt.rb
src/: config.rs  error.rs  main.rs
src/api/: client.rs  models.rs
src/cli/: auth.rs  mod.rs  post.rs  search.rs  subreddit.rs  user.rs
src/nlp/: mod.rs  patterns.rs  router.rs
src/output/: mod.rs
src/tui/: app.rs  event.rs  mod.rs  ui.rs
